--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
     <div class="wrapper">
 
       <header>
-        <h1>Web dictaphone</h1>
+        <h1 class="page-header">
+          Web dictaphone
+          <label>
+            <select id="visualizeList">
+              <option value="frequencybars">Frequency bars visualize</option>
+              <option value="sinewave">Sinewave visualize</option>
+            </select>
+          </label>
+        </h1>
       </header>
 
       <section class="main-controls">
@@ -22,10 +30,7 @@
         </div>
       </section>
 
-      <section class="sound-clips">
-
-
-      </section>
+      <section class="sound-clips"></section>
 
     </div>
 
@@ -38,6 +43,7 @@
 
       <p>Icon courtesy of <a href="http://findicons.com/search/microphone">Find Icons</a>. Thanks to <a href="http://soledadpenades.com/">Sole</a> for the Oscilloscope code!</p>
     </aside>
+
     <script src="scripts/app.js"></script>
 
   </body>
